--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,12 @@
 # 数据目录
 DATA_DIR=./data
 
-# 访问密码
+# 访问密码 (管理员)
 ACCESS_PASSWORD=changeme
+
+# 访客密码 (可选，可设置多个)
+# GUEST_PASSWORD1=guest1pwd
+# GUEST_PASSWORD2=guest2pwd
 
 # JWT 密钥 (请更改为随机字符串)
 JWT_SECRET=your-secret-key-change-this
